# simpan-kan-filemu

./: .gitignore  Cargo.toml  LICENSE  README.md  env_sample
migrations/: 20260114101753_init.sql
src/: main.rs  shared_values.rs
src/manage/: auth.rs  delete.rs  home.rs  list.rs  mod.rs  rename.rs  upload.rs
