[package]
name = "simpan-kan-filemu"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-multipart = "0.7.2"
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
dotenv = "0.15.0"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = [ "postgres","runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.49.0", features = ["full"] }
